--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,10 +15,6 @@ file( GLOB ${PROJECT_NAME}_INCLUDES source/include/*.hpp )
 file( GLOB ${PROJECT_NAME}_SOURCES source/src/*.cpp )
 
 # Load SDL
-#find_package( SDL2 REQUIRED )
-#find_package( SDL2_image REQUIRED )
-#find_package( SDL2_mixer REQUIRED )
-
 INCLUDE( FindPkgConfig )
 PKG_SEARCH_MODULE( SDL2 REQUIRED sdl2 )
 PKG_SEARCH_MODULE( SDL2IMAGE REQUIRED SDL2_image>=2.0.0 )
@@ -33,10 +29,12 @@ set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -ansi -Werror -pedantic -
 # Executable
 add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES} ${${PROJECT_NAME}_INCLUDES} )
 
+message ( "SDL2_LIBRARY: = ${PROJECT_NAME}:${${PROJECT_NAME}_SOURCES}:${${PROJECT_NAME}_INCLUDES}")
+
 # Target libraries
-target_link_libraries (${PROJECT_NAME} ${SDL2_LIBRARY} )
-target_link_libraries (${PROJECT_NAME} ${SDLIMAGE2_LIBRARY} )
-target_link_libraries (${PROJECT_NAME} ${SDLMIXER2_LIBRARY} )
+target_link_libraries (${PROJECT_NAME} ${SDL2_LIBRARIES} )
+target_link_libraries (${PROJECT_NAME} ${SDL2IMAGE_LIBRARIES} )
+target_link_libraries (${PROJECT_NAME} ${SDL2MIXER_LIBRARIES} )
 
 message( STATUS "${SDL2_LIBRARY}" )
 message( STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}" )
