- Linked and included SDL2_tff library in cmake file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ INCLUDE( FindPkgConfig )
 PKG_SEARCH_MODULE( SDL2 REQUIRED sdl2 )
 PKG_SEARCH_MODULE( SDL2IMAGE REQUIRED SDL2_image>=2.0.0 )
 PKG_SEARCH_MODULE( SDL2MIXER REQUIRED SDL2_mixer>=2.0.0 )
+PKG_SEARCH_MODULE( SDL2TTF REQUIRED SDL2_ttf>=2.0.0 )
 
 # Include directories
 include_directories( source/include )
@@ -35,8 +36,8 @@ message ( "SDL2_LIBRARY: = ${PROJECT_NAME}:${${PROJECT_NAME}_SOURCES}:${${PROJEC
 target_link_libraries (${PROJECT_NAME} ${SDL2_LIBRARIES} )
 target_link_libraries (${PROJECT_NAME} ${SDL2IMAGE_LIBRARIES} )
 target_link_libraries (${PROJECT_NAME} ${SDL2MIXER_LIBRARIES} )
+target_link_libraries (${PROJECT_NAME} ${SDL2TTF_LIBRARIES} )
 
-message( STATUS "${SDL2_LIBRARY}" )
 message( STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}" )
 message( STATUS "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}" )
 
