--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,3 +70,11 @@ set( CPACK_DEBIAN_PACKAGE_SECTION "games" )
 endif( UNIX )
 
 include(CPack)
+
+# Uninstall target
+configure_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
+    IMMEDIATE @ONLY)
+add_custom_target(uninstall
+    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
