Changed the name of the generated DEB package.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ install( DIRECTORY ${CMAKE_HOME_DIRECTORY}/share/moblok DESTINATION share )
 #<----snip your usual build instructions snip--->
 set( CPACK_PACKAGE_VERSION ${VERSION} )
 set( CPACK_GENERATOR "DEB" ) # TODO: RPM and anything else?
-set( CPACK_PACKAGE_NAME "Moblok'" )
+set( CPACK_PACKAGE_NAME "moblok" )
 set( CPACK_PACKAGE_VERSION_MAJOR ${${PROJECT_NAME}_VERSION_MAJOR} )
 set( CPACK_PACKAGE_VERSION_MINOR ${${PROJECT_NAME}_VERSION_MINOR} )
 set( CPACK_PACKAGE_VERSION_PATCH ${${PROJECT_NAME}_VERSION_PATCH} )
