--- a/scripts/config.in
+++ b/scripts/config.in
@@ -5,4 +5,5 @@ PROJECT_NAME=moblok
 PACKAGE_NAME=${PROJECT_NAME}
 PACKAGE_MAJOR_VERSION=${${PROJECT_NAME}_VERSION_MAJOR}
 PACKAGE_MINOR_VERSION=${${PROJECT_NAME}_VERSION_MINOR}
+PACKAGE_PATCH_VERSION=${${PROJECT_NAME}_VERSION_PATCH}
 PACKAGE_REVISION=1
