--- a/scripts/config.in
+++ b/scripts/config.in
@@ -3,7 +3,7 @@ PROJECT_NAME=moblok
 
 # General packagin info
 PACKAGE_NAME=${PROJECT_NAME}
-PACKAGE_MAJOR_VERSION=${${PROJECT_NAME}_VERSION_MAJOR}
-PACKAGE_MINOR_VERSION=${${PROJECT_NAME}_VERSION_MINOR}
-PACKAGE_PATCH_VERSION=${${PROJECT_NAME}_VERSION_PATCH}
+PACKAGE_MAJOR_VERSION=${PROJECT_VERSION_MAJOR}
+PACKAGE_MINOR_VERSION=${PROJECT_VERSION_MINOR}
+PACKAGE_PATCH_VERSION=${PROJECT_VERSION_PATCH}
 PACKAGE_REVISION=1
